# law-nexus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  _smoke_t02.py  lsp.json  pyproject.toml
.github/workflows/: compliance-gate.yml
.lex/: README.md  repo.yml
.lex/extract/: README.md.md.spo
Old_project/memory/: failed_experiments.yaml  learned_examples.yaml  successful_patterns.yaml
doc/adr/: 0001-onion-package-structure.md  0002-adr-standard-and-compliance-gate.md  0003-library-boundary-contract.md  README.md
git-lex-kit-acp/: README.md  kit.yml
git-lex-kit-law-nexus/: README.md  kit.yml
law-source/consultant/: Список документов (5).xml
law-source/garant/: 44-fz.odt  PP_60_27-01-2022.odt  Постановление Правительства РФ от 15 октября 2022 г N 1838 Об изменении существе.odt  Постановление Правительства РФ от 23 января 2024 г N 50 О приостановлении действ.odt  Постановление Правительства РФ от 24 декабря 2022 г N 2411 Об авансировании дого.odt  Постановление Правительства РФ от 29 декабря 2023 г N 2368 О внесении изменений .odt  Постановление Правительства РФ от 30 сентября 2019 г N 1279 О планах графиках за.odt  Постановление Правительства Российской Федерации от 17 марта 2026 г 277 Об утвер.odt  Постановление Правительства Российской Федерации от 19 октября 2024 г N 1404 О с.odt  Постановление Правительства Российской Федерации от 23 декабря 2024 г N 1875 О м.odt  Федеральный закон от 25 декабря 2023 г N 624 ФЗ О внесении изменений в отдельные.odt  Федеральный закон от 28 декабря 2025 г 507 ФЗ О внесении изменений в Градостроит.odt
prd/: 01_general_idea.md  02_architecture.md  03_PRD.md  04_review_findings.md  05_final_architecture_review.md  06_m002_cypher_safety_contract.md  07_m002_text_to_cypher_recommendation.md  08_m003_minimax_pyo3_functioning_proof.md  09_architecture_planning_verification_research.md  10_m006_parser_graph_staging_recommendation.md  ARCHITECTURE.md
prd/architecture/: POST-M007-PROGRESS.md  PROFILE-ADAPTER.md  README.md  architecture.schema.json  architecture_edges.jsonl  architecture_graph_report.json  architecture_health.md  architecture_items.jsonl  architecture_report.md  claims_ledger.md  closure_roadmap.json  closure_roadmap.md  major_track_split.json  major_track_split.md  product_readiness_blockers.md  remediation_matrix.json  remediation_matrix.md  test-debt.md
prd/parser/: README.md  consultant_hierarchy_prior_art_comparison.json  consultant_hierarchy_prior_art_comparison.md  consultant_hierarchy_records.json  consultant_hierarchy_records.jsonl  consultant_hierarchy_records.md  consultant_parser_proof.json  consultant_parser_proof.md  consultant_prior_art_expectations.json  (+22 more)
scripts/: acp_git_lex_backend.py  analyze-session-learning.py  build-acp-canonical-integration.py  build-acp-composition-staging.py  build-acp-integrated-registry-fixture.py  build-architecture-graph.py  build-consultant-hierarchy-records.py  build-consultant-prior-art-expectations.py  build-consultant-relation-candidates.py  build-independent-structural-signal-inputs.py  build-local-retrieval-quality-benchmark.py  build-materialized-descriptor-inputs.py  build-odt-smoke-records.py  build-offline-citation-retrieval-cases.py  build-ontology-graphrag-proof-cases.py  build-parser-evidence-span-materialization.py  build-parser-golden-cases.py  build-parser-staging-graph.py  build-real-artifact-retrieval-cases.py  build-representative-retrieval-corpus.py  build-safe-structural-descriptor-remediation-inputs.py  build-semantic-descriptor-inputs.py  build-source-id-uniqueness.py  build-source-record-cardinality-signal-inputs.py  build_representative_retrieval_corpus_manifest.py  check-gsd-sync-drift.py  check-local-retrieval-runtime.py  compare-consultant-hierarchy-prior-art.py  evaluate-falkordb-pack-quality.py  evaluate-falkordb-skill-quality.py  evaluate-falkordb-trigger-proxy.py  evaluate-parser-golden-cases.py  evaluate-s09-local-embeddings.py  export-acp-architecture-projection.py  export-acp-recovery-view.py  export-architecture-rdf-projection.py  extract-prd-architecture-items.py  generate-architecture-closure-roadmap.py  generate-architecture-remediation-matrix.py  generate-architecture-track-split.py  (+105 more)
tests/: test_acp_architecture_projection.py  test_acp_canonical_integration.py  test_acp_composition_staging.py  test_acp_git_lex_backend.py  test_acp_integrated_registry_fixture.py  test_acp_records.py  test_acp_recovery_export.py  test_acp_schema_extension_fixtures.py  test_analyze_session_learning.py  test_architecture_analysis_views.py  test_architecture_closure_roadmap.py  test_architecture_graph.py  test_architecture_rdf_projection.py  test_architecture_registry_schema.py  test_architecture_remediation_matrix.py  test_architecture_track_split.py  test_architecture_verifier.py  test_architecture_views.py  test_consultant_document_type_classification.py  test_consultant_hierarchy_prior_art_comparison.py  test_consultant_hierarchy_records.py  test_consultant_parser_proof.py  test_consultant_prior_art_expectations.py  test_consultant_prior_art_inventory.py  test_consultant_relation_candidates.py  test_evaluate_falkordb_pack_quality.py  test_evaluate_falkordb_skill_quality.py  test_evaluate_falkordb_trigger_proxy.py  test_evidence_span_golden_retrieval_cases.py  test_evidence_span_local_retrieval_metrics.py  test_extract_prd_architecture_items.py  test_falkordb_bulk_loader_proof.py  test_falkordb_csv_ingest_proof.py  test_generate_m065_s02_install_manifest.py  test_git_lex_diagnostic_adapter.py  test_graph_filtered_retrieval_integration.py  test_gsd_sync_drift.py  test_held_out_semantic_descriptor_ablation.py  test_held_out_semantic_descriptor_inputs.py  test_held_out_semantic_descriptor_scoring.py  (+121 more)
(+731 files in other folders)
