[project]
name = "law_nexus"
version = "0.1.0"
description = "Architecture smoke tooling for LegalGraph Nexus."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "adaptix",
    "basedpyright>=1.39.4",
    "hypothesis",
    "import-linter",
    "pyrefly",
    "pytest",
    "pytest-xdist",
    "ruff",
    "ty",
]
local-embeddings = [
    "accelerate",
    "einops",
    "falkordb>=1.6.1",
    "sentence-transformers>=5.1.1",
    "torch",
    "transformers==4.51.0",
]
local-embeddings-accelerated = [
    "flash-attn",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["scripts", "tests", "src"]
include = ["pyproject.toml", "scripts/**/*.py", "tests/**/*.py", "src/**/*.py"]
exclude = [
    ".bg-shell",
    ".cache",
    ".git",
    ".gitnexus",
    ".gsd",
    ".venv",
    "Old_project",
    "build",
    "dist",
    "node_modules",
    "tmp",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/verify-s02-skills.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"

[tool.ty.src]
include = ["scripts", "tests", "src"]
exclude = [".gsd", "Old_project", ".venv"]

[tool.pyrefly]
python-version = "3.13"
project-includes = ["scripts/**/*.py", "tests/**/*.py", "src/**/*.py"]
project-excludes = [".gsd/**", "Old_project/**", ".venv/**"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["scripts", "tests", "src"]
exclude = [".gsd", ".venv", "Old_project", "law-source", "node_modules", "tmp"]
reportExplicitAny = false
reportAny = false
reportUnusedCallResult = false

[tool.importlinter]
# Enforces the onion package structure mandated by ADR-0001
# (doc/adr/0001-onion-package-structure.md). Dependencies point inward only:
# composition (outermost wiring) -> application / adapters -> ports -> domain.
# Each layer may only import layers below it in the `layers` contract, and the
# forbidden contracts name the specific high-risk directions explicitly.
root_package = "law_nexus"

[[tool.importlinter.contracts]]
# Domain is the innermost layer: it must not import any other project layer.
name = "Domain has no outbound layer imports"
type = "forbidden"
source_modules = ["law_nexus.domain"]
forbidden_modules = [
    "law_nexus.adapters",
    "law_nexus.application",
    "law_nexus.composition",
    "law_nexus.ports",
]

[[tool.importlinter.contracts]]
# Ports are interface contracts: they may only depend on domain.
name = "Ports have no outbound layer imports"
type = "forbidden"
source_modules = ["law_nexus.ports"]
forbidden_modules = [
    "law_nexus.adapters",
    "law_nexus.application",
    "law_nexus.composition",
]

[[tool.importlinter.contracts]]
# Application depends on ports + domain, NEVER on concrete adapters or the
# composition root. Adapters are wired in only at the composition root.
name = "Application must not import adapters or composition"
type = "forbidden"
source_modules = ["law_nexus.application"]
forbidden_modules = ["law_nexus.adapters", "law_nexus.composition"]

[[tool.importlinter.contracts]]
# Declarative onion layering: each layer may only import layers below it.
# composition is the outermost root (may import all); domain is innermost.
# Note: `application` and `adapters` sit in the same middle ring and must not
# import each other. The `Application must not import adapters` contract above
# covers application -> adapters; the layers order below forbids adapters ->
# application (application sits above adapters).
name = "Onion dependency layers"
type = "layers"
layers = [
    "law_nexus.composition",
    "law_nexus.application",
    "law_nexus.adapters",
    "law_nexus.ports",
    "law_nexus.domain",
]
